@@ -293,7 +293,7 @@ public class JDKAtomicTypesDeserTest
         MyBean2303 intRef = r.readValue(" {\"refRef\": 2 } ");
         assertNotNull(intRef.refRef);
         assertNotNull(intRef.refRef.get());
-        assertEquals(intRef.refRef.get().get(), new Integer(2));
+        assertEquals(intRef.refRef.get().get(), Integer.valueOf(2));
 
         MyBean2303 nullRef = r.readValue(" {\"refRef\": null } ");
         assertNotNull(nullRef.refRef);
